--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -2526,24 +2526,26 @@
 % #3: Image width
 %
 {
-  % Set width of SVG image
-  \str_if_eq:nnF { #3 } { ! }
-    { \cs_gset:Npn \svgwidth { #3 } }
-    
-  \hbox_gset:Nn #1
-  {
-    \begin{subfiglistsvgenv}
-      \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
-      \tl_if_in:nxTF { #2 } { \char_generate:nV { `/ } \subfiglist_tmp_int }
-      {
-        \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
-        \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
-        \import { \seq_use:Nn \subfiglist_tmp_seq { / } / }{ \tl_use:N \subfiglist_tmpa_tl }
-      }{
-        \input { #2 }
-      }
-    \end{subfiglistsvgenv}
-  }
+  \subfiglist_group_begin:
+    % Set width of SVG image
+    \str_if_eq:nnF { #3 } { ! }
+      { \cs_gset:Npn \svgwidth { #3 } }
+      
+    \hbox_gset:Nn #1
+    {
+      \begin{subfiglistsvgenv}
+        \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
+        \tl_if_in:nxTF { #2 } { \char_generate:nV { `/ } \subfiglist_tmp_int }
+        {
+          \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
+          \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
+          \import { \seq_use:Nn \subfiglist_tmp_seq { / } / }{ \tl_use:N \subfiglist_tmpa_tl }
+        }{
+          \input { #2 }
+        }
+      \end{subfiglistsvgenv}
+    }
+  \subfiglist_group_end:
 }
 
 % Command for loading a TeX image
@@ -2554,40 +2556,44 @@
 % #3: Image width
 %
 {
-  % Has natural width been requested?
-  \str_if_eq:nnTF { ! } { #3 }
-  {
-    \hbox_gset:Nn #1
+  \subfiglist_group_begin:
+    % Has natural width been requested?
+    \str_if_eq:nnTF { ! } { #3 }
     {
-      \subfiglist_load_tex_make_env:n { #2 }
+      \hbox_gset:Nn #1
+      {
+        \subfiglist_load_tex_make_env:n { #2 }
+      }
+    }{
+      \hbox_set:Nn \subfiglist_tmp_box
+      {
+        \subfiglist_load_tex_make_env:n { #2 }
+      }
+      \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N \subfiglist_tmp_box }
+      \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N \subfiglist_tmp_box } }
     }
-  }{
-    \hbox_set:Nn \subfiglist_tmp_box
-    {
-      \subfiglist_load_tex_make_env:n { #2 }
-    }
-    \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N \subfiglist_tmp_box }
-    \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N \subfiglist_tmp_box } }
-  }
+  \subfiglist_group_end:
 }
 
-% Command for loading a TeX image
+% Environment for loading a TeX image
 \cs_new:Npn \subfiglist_load_tex_make_env:n #1
 %
 % #1: File path
 %
 {
-  \begin{subfiglisttexenv}
-  \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
-  \tl_if_in:nxTF { #1 } { \char_generate:nV { `/ } \subfiglist_tmp_int }
-    {
-      \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #1 }
-      \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
-      \import { \seq_use:Nn \subfiglist_tmp_seq { / } / }{ \tl_use:N \subfiglist_tmpa_tl }
-    }{
-      \input { #1 }
-    }
-  \end{subfiglisttexenv}
+  \subfiglist_group_begin:
+    \begin{subfiglisttexenv}
+    \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
+    \tl_if_in:nxTF { #1 } { \char_generate:nV { `/ } \subfiglist_tmp_int }
+      {
+        \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #1 }
+        \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
+        \import { \seq_use:Nn \subfiglist_tmp_seq { / } / }{ \tl_use:N \subfiglist_tmpa_tl }
+      }{
+        \input { #1 }
+      }
+    \end{subfiglisttexenv}
+  \subfiglisg_group_end:
 }
 
 % Command for loading a bitmap image.
@@ -2598,20 +2604,22 @@
 % #3: Image width
 %
 {
-  % Has natural width been requested?
-  \str_if_eq:nnTF { ! } { #3 }
-  {
-    % Load with natural width
-    \hbox_gset:Nn #1 { \includegraphics { #2 } }
-  }{
-    % Load with natural width and scale to desired width.
-    % This is a workaround to an apparent bug of \includegraphics,
-    % which slightly changes the aspect ratio of an image that
-    % is loaded with a specific width.
-    \hbox_set:Nn \subfiglist_tmp_box { \includegraphics { #2 } }
-    \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N \subfiglist_tmp_box }
-    \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N \subfiglist_tmp_box } }
-  }
+  \subfiglist_group_begin:
+    % Has natural width been requested?
+    \str_if_eq:nnTF { ! } { #3 }
+    {
+      % Load with natural width
+      \hbox_gset:Nn #1 { \includegraphics { #2 } }
+    }{
+      % Load with natural width and scale to desired width.
+      % This is a workaround to an apparent bug of \includegraphics,
+      % which slightly changes the aspect ratio of an image that
+      % is loaded with a specific width.
+      \hbox_set:Nn \subfiglist_tmp_box { \includegraphics { #2 } }
+      \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N \subfiglist_tmp_box }
+      \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N \subfiglist_tmp_box } }
+    }
+  \subfiglist_group_end:
 }
 
 %Command for loading an SVG or bitmap image
@@ -2622,31 +2630,33 @@
 % #3: Image width
 %
 {
-  % Strip off path
-  \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
-  \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
-  \seq_get_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
-  % Determine file extension.
-  \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `. } }
-  \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `. } \subfiglist_tmp_int } { #2 }
-  \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
-  % Set command to load images depending on file extension.
-  \seq_if_empty:NTF \subfiglist_tmp_seq
-  {
-    % There is no file extension, only the file name.
-    % Assume bitmap image in this case.
-    \subfiglist_load_img:Nnn #1 { #2 } { #3 }
-  }{
-    % Distinguish between file extensions
-    \tl_map_inline:nn { { svg } { tex } { img } }
+  \subfiglist_group_begin:
+    % Strip off path
+    \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
+    \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
+    \seq_get_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
+    % Determine file extension.
+    \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `. } }
+    \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `. } \subfiglist_tmp_int } { #2 }
+    \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
+    % Set command to load images depending on file extension.
+    \seq_if_empty:NTF \subfiglist_tmp_seq
     {
-      \bool_if:nT { \subfiglist_use:c { subfiglist_load_is_ ##1 _p:V } \subfiglist_tmpa_tl }
+      % There is no file extension, only the file name.
+      % Assume bitmap image in this case.
+      \subfiglist_load_img:Nnn #1 { #2 } { #3 }
+    }{
+      % Distinguish between file extensions
+      \tl_map_inline:nn { { svg } { tex } { img } }
       {
-        \subfiglist_use:c { subfiglist_load_ ##1 :Nnn } #1 { #2 } { #3 }
-        \tl_map_break:
+        \bool_if:nT { \subfiglist_use:c { subfiglist_load_is_ ##1 _p:V } \subfiglist_tmpa_tl }
+        {
+          \subfiglist_use:c { subfiglist_load_ ##1 :Nnn } #1 { #2 } { #3 }
+          \tl_map_break:
+        }
       }
     }
-  }
+  \subfiglist_group_end:
 }
 
 \cs_generate_variant:Nn \subfiglist_load:Nnn { NnV }
@@ -2665,32 +2675,34 @@
 % #3: Image width
 %
 {
-  % Strip off path
-  \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
-  \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
-  \seq_get_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
-  % Determine file extension.
-  \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `. } }
-  \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `. } \subfiglist_tmp_int } { #2 }
-  \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
-  % Set command to load images depending on file extension.
-  \seq_if_empty:NTF \subfiglist_tmp_seq
-  {
-    % There is no file extension, only the file name.
-    % Assume bitmap image in this case.
-    \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N #1 }
-    \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N #1 } }
-  }{
-    \bool_lazy_or:nnTF
-    { \subfiglist_load_is_svg_p:V \subfiglist_tmpa_tl }
-    { \subfiglist_load_is_tex_p:V \subfiglist_tmpa_tl }
+  \subfiglist_group_begin:
+    % Strip off path
+    \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
+    \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
+    \seq_get_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
+    % Determine file extension.
+    \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `. } }
+    \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `. } \subfiglist_tmp_int } { #2 }
+    \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
+    % Set command to load images depending on file extension.
+    \seq_if_empty:NTF \subfiglist_tmp_seq
     {
-      \subfiglist_load_svg:Nnn #1 { #2 } { #3 }
-    }{
+      % There is no file extension, only the file name.
+      % Assume bitmap image in this case.
       \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N #1 }
       \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N #1 } }
+    }{
+      \bool_lazy_or:nnTF
+      { \subfiglist_load_is_svg_p:V \subfiglist_tmpa_tl }
+      { \subfiglist_load_is_tex_p:V \subfiglist_tmpa_tl }
+      {
+        \subfiglist_load_svg:Nnn #1 { #2 } { #3 }
+      }{
+        \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N #1 }
+        \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N #1 } }
+      }
     }
-  }
+  \subfiglist_group_end:
 }
 
 \cs_generate_variant:Nn \subfiglist_restore:Nnn { NnV }
